# vRoute-Open

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  Makefile  README.md  TODO.md  docker-compose.yml
03-vfinacc/: Dockerfile  README.md  manifest.json  pyproject.toml
03-vfinacc/alembic/: env.py
03-vfinacc/alembic/versions/: 0001_vfinacc_init.py
03-vfinacc/app/: database.py  grpc_client.py  main.py  models.py  routes.py  schemas.py  service.py
03-vfinacc/app/compliance/: __init__.py
03-vfinacc/app/cost_center/: __init__.py
03-vfinacc/app/ledger/: __init__.py
03-vfinacc/app/reconciliation/: __init__.py
03-vfinacc/app/transaction/: __init__.py
03-vfinacc/frontend/: package.json
03-vfinacc/frontend/scripts/: bundle.js
03-vfinacc/frontend/src/: api.ts  main.ts  renderers.ts  types.ts
03-vfinacc/static/: index.html
03-vfinacc/tests/: conftest.py  test_finance_api.py  test_nft_iso25010.py
04-vdesign-physical/: Dockerfile  README.md  alembic.ini  manifest.json  pyproject.toml
04-vdesign-physical/alembic/: env.py
04-vdesign-physical/alembic/versions/: 0001_vdesign_physical_init.py
04-vdesign-physical/app/: config.py  database.py  grpc_client.py  main.py  models.py  routes.py  schemas.py  service.py
04-vdesign-physical/app/golden_sample/: __init__.py
04-vdesign-physical/app/handover_kit/: __init__.py
04-vdesign-physical/app/lab_test/: __init__.py
04-vdesign-physical/frontend/: package.json
04-vdesign-physical/static/: index.html
04-vdesign-physical/tests/: conftest.py  test_design_physical_api.py  test_nft_iso25010.py
(+393 files in other folders)
