[project]
name = "vfinacc"
version = "1.0.0"
description = "vFinacc — R2R Finance Module (Record-to-Report)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    # fastapi/starlette use deprecated asyncio.iscoroutinefunction — not our code
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
    # pytest-asyncio plugin internals use deprecated event loop policy APIs
    "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.set_event_loop_policy' is deprecated:DeprecationWarning",
]
